hphp/test/slow/using/bad-lambda3.php.expectf
Fatal error: Call to undefined method Closure$%S::__dispose() in %s/test/slow/using/bad-lambda3.php on line 3
